src/test/ui/parser/issue-32214.stderr
error: type parameters must be declared prior to associated type bindings
  --> $DIR/issue-32214.rs:3:37
   |
LL | pub fn test<W, I: Iterator<Item=(), W> >() {}
   |                                     ^

error: aborting due to previous error

